# metagate-hipporag

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
artifacts/: README.md
configs/: experiment.yaml  gate_prompt.json  qa_prompt.json
data/: README.md  manifest.json
data/splits/: 2wikimultihopqa.json  musique.json  nq_rear.json
docs/superpowers/plans/: 2026-07-11-metagate-hipporag-implementation.md
docs/superpowers/specs/: 2026-07-11-metagate-hipporag-design.md
patches/: hipporag-openai-only.patch  hipporag-openai-only.patch.sha256
results/: README.md
scripts/: bootstrap_upstream.py
src/metagate_hipporag/: batch_openie.py  config.py  data.py  embedding.py  fusion.py  hipporag_adapter.py  metagate.py  methods.py  models.py  openai_client.py  provenance.py
tests/: test_batch_openie.py  test_bootstrap_upstream.py  test_config_and_provenance.py  test_data.py  test_embedding.py  test_fusion.py  test_hipporag_adapter.py  test_metagate.py  test_methods.py  test_openai_client.py  test_upstream_contract.py
tests/fixtures/: batch_ner_output.jsonl  batch_triple_output.jsonl  musique_small.json  nq_small.json  openie_smoke_docs.json  twowiki_small.json
