[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "metagate-hipporag"
version = "0.1.0"
description = "Metacognitive retrieval control experiments on HippoRAG 2"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "filelock==3.16.1",
  "httpx==0.27.2",
  "networkx==3.4.2",
  "numpy==1.26.4",
  "openai==1.91.0",
  "packaging==24.2",
  "pandas==2.2.3",
  "pyarrow==18.1.0",
  "pydantic==2.10.4",
  "python-dotenv==1.0.1",
  "python-igraph==0.11.8",
  "pyyaml==6.0.2",
  "scikit-learn==1.6.1",
  "scipy==1.15.1",
  "statsmodels==0.14.4",
  "tenacity==8.5.0",
  "tiktoken==0.7.0",
  "torch==2.5.1",
  "tqdm==4.67.1",
  "transformers==4.45.2",
  "typer==0.15.1",
  "einops==0.8.0",
]

[dependency-groups]
dev = [
  "mypy==1.14.1",
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "respx==0.22.0",
  "ruff==0.9.2",
]
analysis = [
  "matplotlib==3.10.0",
  "seaborn==0.13.2",
]

[project.scripts]
metagate = "metagate_hipporag.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/metagate_hipporag"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "integration: requires a prepared local HippoRAG checkout but no paid API call",
  "live_api: requires OPENAI_API_KEY and can incur cost",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["metagate_hipporag"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
